// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: issue state /github close issue 1`] = `
[MockFunction cache.get] {
  "calls": Array [
    Array [
      "channel#C2147483705:issue#undefined",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Integration: issue state /github close issue 2`] = `
[MockFunction cache.set] {
  "calls": Array [
    Array [
      "pending-command#13345224609.738474920.8088930838d88f008e0",
      Object {
        "channel_id": "C2147483705",
        "channel_name": "test",
        "command": "/github",
        "enterprise_id": "E0001",
        "enterprise_name": "Globular%20Construct%20Inc",
        "response_url": "https://hooks.slack.com/commands/1234/5678",
        "team_domain": "example",
        "team_id": "T0001",
        "text": "close https://github.com/owner/repo/issues/123",
        "token": "secret",
        "trigger_id": "13345224609.738474920.8088930838d88f008e0",
        "user_id": "U2147483697",
        "user_name": "Steve",
      },
    ],
    Array [
      "channel#C2147483705:issue#undefined",
      Object {
        "channel": "C2147483705",
        "ts": undefined,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Integration: issue state /github close issue 3`] = `[MockFunction cache.fetch]`;

exports[`Integration: issue state /github reopen issue 1`] = `
[MockFunction cache.get] {
  "calls": Array [
    Array [
      "channel#C2147483705:issue#undefined",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Integration: issue state /github reopen issue 2`] = `
[MockFunction cache.set] {
  "calls": Array [
    Array [
      "pending-command#13345224609.738474920.8088930838d88f008e0",
      Object {
        "channel_id": "C2147483705",
        "channel_name": "test",
        "command": "/github",
        "enterprise_id": "E0001",
        "enterprise_name": "Globular%20Construct%20Inc",
        "response_url": "https://hooks.slack.com/commands/1234/5678",
        "team_domain": "example",
        "team_id": "T0001",
        "text": "reopen https://github.com/owner/repo/issues/123",
        "token": "secret",
        "trigger_id": "13345224609.738474920.8088930838d88f008e0",
        "user_id": "U2147483697",
        "user_name": "Steve",
      },
    ],
    Array [
      "channel#C2147483705:issue#undefined",
      Object {
        "channel": "C2147483705",
        "ts": undefined,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`Integration: issue state /github reopen issue 3`] = `[MockFunction cache.fetch]`;
